[gd_scene load_steps=4 format=3 uid="uid://d2pn0ww5aqdo5"]

[ext_resource type="Script" path="res://gui/main_menu.gd" id="1_ssco8"]
[ext_resource type="PackedScene" uid="uid://c1ntvyjxu8wn0" path="res://gui/logo.tscn" id="2_0rxef"]
[ext_resource type="Texture2D" uid="uid://v46r18qu43d" path="res://gui/main_menu_background.png" id="2_gkpg7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ssco8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gkpg7")
expand_mode = 2
stretch_mode = 5

[node name="Logo" parent="." instance=ExtResource("2_0rxef")]
layout_mode = 2
offset_left = 417.0
offset_top = -6.0
offset_right = 1137.0
offset_bottom = 714.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_top = 250

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="StartButton" type="Button" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "START_BUTTON"

[node name="CreditsButton" type="Button" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CREDITS_BUTTON"

[node name="QuitButton" type="Button" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT_BUTTON"

[node name="Spacer" type="Control" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxHBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxSoundLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/SfxHBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "SFX_SLIDER_LABEL"

[node name="SfxSoundImage" type="TextureRect" parent="AspectRatioContainer/MarginContainer/VBoxContainer/SfxHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SfxSoundSlider" type="HSlider" parent="AspectRatioContainer/MarginContainer/VBoxContainer/SfxHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
scrollable = false

[node name="SfxSoundPercentLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/SfxHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_stretch_ratio = 3.0

[node name="MusicHBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicSoundLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/MusicHBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "MUSIC_SLIDER_LABEL"

[node name="MusicSoundImage" type="TextureRect" parent="AspectRatioContainer/MarginContainer/VBoxContainer/MusicHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MusicSoundSlider" type="HSlider" parent="AspectRatioContainer/MarginContainer/VBoxContainer/MusicHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
scrollable = false

[node name="MusicSoundPercentLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/MusicHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_stretch_ratio = 3.0
